<resources>
    <string name="app_name">KickTracker</string>
    <string name="new_session">New Session</string>
    <string name="view_data">View Data</string>
    <string name="new_kick">New Kick</string>
    <string name="num_kicks">Kicks:</string>
    <string name="num_sccss">Successes:</string>
    <string name="percentage">Percentage:</string>
    <string name="inc">+</string>
    <string name="dec">-</string>
    <string name="store">store</string>
    <string name="saveSession">Save Session</string>
    <string name="ovrl_stats">Overall Stats</string>
    <string name="add_notes">Add Notes</string>
    <string name="saveNotes">Save Notes</string>
    <string name="viewNotes">View Notes</string>
    <string name="logoDescription">Logo</string>
    <string name="pitchDescription">Image of pitch</string>
    <string name="addNotesHint">Add notes...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="language">Language</string>
    <string name="languageHint">Select a language</string>


</resources>
