<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backGroundView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColour"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="false"
    tools:context=".NewSessionActivity">

    <com.example.kicktracker.gridViewSessionDisplay
        android:id="@+id/grid_view"
        android:layout_width="385dp"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/pitch_view"
        app:layout_constraintEnd_toEndOf="@+id/pitch_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/pitch_view" />

    <ImageView
        android:id="@+id/pitch_view"
        android:layout_width="385dp"
        android:layout_height="350dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/pitchDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rugby_pitch" />

    <Button
        android:id="@+id/new_kick"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@color/buttonColour"
        android:onClick="newKick"
        android:text="@string/new_kick"
        android:textColor="@color/buttonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sccssDisplayValue" />

    <TextView
        android:id="@+id/kicksDisplayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/num_kicks"
        android:textColor="@color/plainText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pitch_view" />

    <TextView
        android:id="@+id/kickDisplayValue"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_vertical"
        android:textColor="@color/plainText"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/kicksDisplayLabel"
        app:layout_constraintTop_toTopOf="@+id/kicksDisplayLabel" />

    <TextView
        android:id="@+id/sccssDisplayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/num_sccss"
        android:textColor="@color/plainText"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/kickDisplayValue"
        app:layout_constraintTop_toTopOf="@+id/kickDisplayValue" />

    <TextView
        android:id="@+id/sccssDisplayValue"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_vertical"
        android:textColor="@color/plainText"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/sccssDisplayLabel"
        app:layout_constraintTop_toTopOf="@+id/sccssDisplayLabel" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/buttonColour"
        android:onClick="saveSession"
        android:text="@string/saveSession"
        android:textColor="@color/buttonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_kick" />

    <TextView
        android:id="@+id/dataTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prctgeDisplayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/percentage"
        android:textColor="@color/plainText"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/prctgeDisplayValue"
        app:layout_constraintTop_toTopOf="@+id/sccssDisplayValue" />

    <TextView
        android:id="@+id/prctgeDisplayValue"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center_vertical"
        android:textColor="@color/plainText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/prctgeDisplayLabel" />

    <Button
        android:id="@+id/addNotesButon"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginTop="15dp"
        android:background="@color/buttonColour"
        android:onClick="addNotes"
        android:text="@string/add_notes"
        android:textColor="@color/buttonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>