<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewSessionDataActivity">

    <com.example.kicktracker.gridViewSessionDisplayDataParent
        android:id="@+id/grid_view"
        android:layout_width="385dp"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/pitch_view"
        app:layout_constraintEnd_toEndOf="@+id/pitch_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/pitch_view" />

    <ImageView
        android:id="@+id/pitch_view"
        android:layout_width="385dp"
        android:layout_height="350dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="Underlying pitch png"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rugby_pitch" />

    <TextView
        android:id="@+id/kicksDisplayLabel"
        android:layout_width="38dp"
        android:layout_height="26dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/num_kicks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pitch_view" />

    <TextView
        android:id="@+id/kickDisplayValue"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/kicksDisplayLabel"
        app:layout_constraintTop_toTopOf="@+id/kicksDisplayLabel" />

    <TextView
        android:id="@+id/sccssDisplayLabel"
        android:layout_width="70dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/num_sccss"
        app:layout_constraintStart_toEndOf="@+id/kickDisplayValue"
        app:layout_constraintTop_toTopOf="@+id/kickDisplayValue" />

    <TextView
        android:id="@+id/sccssDisplayValue"
        android:layout_width="33dp"
        android:layout_height="28dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/sccssDisplayLabel"
        app:layout_constraintTop_toTopOf="@+id/sccssDisplayLabel" />

    <TextView
        android:id="@+id/percentageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/percentage"
        app:layout_constraintStart_toEndOf="@+id/sccssDisplayValue"
        app:layout_constraintTop_toTopOf="@+id/sccssDisplayValue" />

    <TextView
        android:id="@+id/percentageValue"
        android:layout_width="33dp"
        android:layout_height="28dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/percentageLabel"
        app:layout_constraintTop_toTopOf="@+id/percentageLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>